1/1.09/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-2-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-2
  template:
    metadata:
      labels:
        app: app-2
    spec:
      containers:
        - name: app-2
          image: jylhakos/app-2:1.09
