1/1.09/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-2-svc
spec:
  type: ClusterIP
  selector:
    app: app-2
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
